app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

h1 {
  font-family: 'Cinzel';
  font-size: 60px;
  color: black !important;
}

h2 {
  font-family: 'Philosopher';
  font-size: 30px;
  color: black !important;
}

h3 {
  font-family: 'Lateef';
  font-size: 50px !important;
  color: #0c090a !important;
}

p {
  font-family: 'Lateef';
  font-size: 30px !important;
  color: #0c090a !important;
}

.blog-post p {
  font-size: 23px !important;
}

p.image-description {
  font-size: 20px !important;
}

.sidebar { border-left: 1px solid grey; }

#bio-text {
  padding-top: 15px;
}

#reading_services h3 {
  font-family: 'Patrick Hand', cursive;
  font-size: 34px !important;
}

.order-link {
  color: red;
  font-style: italic;
  font-size: 20px;
  text-decoration: underline;
}

.price {
  color: #0066FF;
  font-size: 18px;
}

hr {
  height: 2px;
  background-color:#555;
  margin-top: 1px;
  margin-bottom: 20px;
  width: 100%;
}

.smaller { font-size: 25px; }

.active {
  text-decoration: underline;
  font-weight: bolder;
}

.navbar-nav li a:hover {
  text-decoration: underline;
  font-weight: bolder;
}

#homepage-first-paragraph h2 {
  font-size: 30px;
}

#homepage-second-paragraph h2 {
  font-size: 27px;
}

li {
  font-family: 'Lateef';
  font-size: 20px !important;
  color: #0c090a !important;
}

.blog-post {
  border-right: 1px solid black;
  padding-right: 35px;
}

#about_page p {
  padding-top: 15px;
  font-size: 24px !important;
}

#about_page p.image-description {
  font-size: 20px !important;
}

#team_page p {
  font-size: 24px !important;
}

